<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back01"
    tools:context=".View.MovieView">
    <!-- Toolbar-->
    <RelativeLayout
        android:id="@+id/toolbarRl2"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/shape_toolbar02">

        <!--Back button-->
        <ImageButton
            android:id="@+id/backBtn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_white"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:layout_centerVertical="true"
            android:contentDescription="@string/back_button" />

        <!--Title-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_details"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textStyle="bold"/>

    </RelativeLayout>

    <!--All content scrollview-->
    <ScrollView
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_below="@+id/toolbarRl2"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--Movie Info-->
            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--Movie Preview-->
                <RelativeLayout
                    android:id="@+id/movieRl"
                    android:layout_width="110dp"
                    android:layout_height="150dp"
                    android:layout_marginEnd="5dp"
                    android:background="@color/gray02">

                    <!--View-->
                    <ImageView
                        android:id="@+id/movieView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:contentDescription="@string/movie_view" />

                    <!--ProgressBar-->
                    <ProgressBar
                        android:id="@+id/progressBar2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </RelativeLayout>

                <!--Movie Title-->

                <TextView
                    android:id="@+id/title2Tv"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/movieRl"
                    android:text="@string/movie_title"/>


                <!--Table-->
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title2Tv"
                    android:layout_toEndOf="@id/movieRl">


                    <!--Authors Row-->
                    <TableRow >

                        <TextView
                            android:id="@+id/authors2Label"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/authors"
                            android:layout_marginEnd="5dp"/>
                        <TextView
                            android:id="@+id/authors2Tv"
                            android:layout_weight="1"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/n_a"
                            android:layout_marginEnd="5dp"/>

                    </TableRow>

                    <!--Date Row-->
                    <TableRow
                        android:layout_marginTop="5dp"
                        >
                        <TextView
                            android:id="@+id/date2Label"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/date"
                            android:layout_marginEnd="5dp"/>
                        <TextView
                            android:id="@+id/date2Tv"
                            android:layout_weight="1"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/n_a"
                            android:layout_marginEnd="5dp"/>
                    </TableRow>

                    <!--Publishers Row-->
                    <TableRow
                        android:layout_marginTop="5dp"
                        >
                        <TextView
                            android:id="@+id/publishers2Label"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/publishers"
                            android:layout_marginEnd="5dp"/>
                        <TextView
                            android:id="@+id/publishers2Tv"
                            android:layout_weight="1"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/n_a"
                            android:layout_marginEnd="5dp"/>
                    </TableRow>

                    <!--Code Row-->
                    <TableRow
                        android:layout_marginTop="5dp"
                        >
                        <TextView
                            android:id="@+id/codeBarLabel"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/code_bar"
                            android:layout_marginEnd="5dp"/>
                        <TextView
                            android:id="@+id/codeBarTv"
                            android:layout_weight="1"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/n_a"
                            android:layout_marginEnd="5dp"/>
                    </TableRow>

                    <!--Edition Row-->
                    <TableRow
                        android:layout_marginTop="5dp"
                        >
                        <TextView
                            android:id="@+id/editionLabel"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/edition"
                            android:layout_marginEnd="5dp"/>
                        <TextView
                            android:id="@+id/editionTv"
                            android:layout_weight="1"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/n_a"
                            android:layout_marginEnd="5dp"/>
                    </TableRow>

                    <!--Media Row-->
                    <TableRow
                        android:layout_marginTop="5dp"
                        >
                        <TextView
                            android:id="@+id/mediaLabel"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/media"
                            android:layout_marginEnd="5dp"/>
                        <TextView
                            android:id="@+id/mediaTv"
                            android:layout_weight="1"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/n_a"
                            android:layout_marginEnd="5dp"/>
                    </TableRow>
                </TableLayout>

            </RelativeLayout>


            <!--Actors Name-->
            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/actorsLabel"
                style="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/the_actors_names"
                android:textColor="@color/black"/>
            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/actorsTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/n_a"
                android:textColor="@color/black"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>