<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back01"
    tools:context=".View.BookView">

    <!-- Toolbar-->
    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/shape_toolbar02">

        <!--Back button-->
        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_white"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:layout_centerVertical="true"
            android:contentDescription="@string/back_button" />
        
        <!--Title-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_details"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textStyle="bold"/>

    </RelativeLayout>

    <!--All content scrollview-->
    <ScrollView
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_below="@+id/toolbarRl"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--BookInfo-->
            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--Book Preview-->
                <RelativeLayout
                    android:id="@+id/pdfRl"
                    android:layout_width="110dp"
                    android:layout_height="150dp"
                    android:layout_marginEnd="5dp"
                    android:background="@color/gray02">

                    <!--View-->
                    <ImageView
                        android:id="@+id/bookView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"/>

                    <!--ProgressBar-->
                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </RelativeLayout>

                <!--Book Title-->

                <TextView
                    android:id="@+id/titleTv"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/pdfRl"
                    android:text="@string/book_title"/>


                <!--Table-->
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/titleTv"
                    android:layout_toEndOf="@id/pdfRl">


                    <!--Authors Row-->
                    <TableRow >

                        <TextView
                            android:id="@+id/authorsLabel"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Authors"
                            android:layout_marginEnd="5dp"/>
                        <TextView
                            android:id="@+id/authorsTv"
                            android:layout_weight="1"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="N/A"
                            android:layout_marginEnd="5dp"/>

                    </TableRow>

                    <!--Date Row-->
                    <TableRow
                        android:layout_marginTop="5dp"
                        >
                        <TextView
                            android:id="@+id/dateLabel"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Date"
                            android:layout_marginEnd="5dp"/>
                        <TextView
                            android:id="@+id/dateTv"
                            android:layout_weight="1"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="N/A"
                            android:layout_marginEnd="5dp"/>
                    </TableRow>

                    <!--Publishers Row-->
                    <TableRow
                        android:layout_marginTop="5dp"
                        >
                        <TextView
                            android:id="@+id/publishersLabel"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Publishers"
                            android:layout_marginEnd="5dp"/>
                        <TextView
                            android:id="@+id/publishersTv"
                            android:layout_weight="1"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="N/A"
                            android:layout_marginEnd="5dp"/>
                    </TableRow>

                    <!--ISBN10 Count Row-->
                    <TableRow
                        android:layout_marginTop="5dp"
                        >
                        <TextView
                            android:id="@+id/isbn10Label"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="ISBN 10"
                            android:layout_marginEnd="5dp"/>
                        <TextView
                            android:id="@+id/isbn10Tv"
                            android:layout_weight="1"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="N/A"
                            android:layout_marginEnd="5dp"/>
                    </TableRow>

                    <!--ISBN13 Count Row-->
                    <TableRow
                        android:layout_marginTop="5dp"
                        >
                        <TextView
                            android:id="@+id/isbn13Label"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="ISBN 13"
                            android:layout_marginEnd="5dp"/>
                        <TextView
                            android:id="@+id/isbn13Tv"
                            android:layout_weight="1"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="N/A"
                            android:layout_marginEnd="5dp"/>
                    </TableRow>

                    <!--Number of pages Row-->
                    <TableRow
                        android:layout_marginTop="5dp"
                        >
                        <TextView
                            android:id="@+id/pagesLabel"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Pages"
                            android:layout_marginEnd="5dp"/>
                        <TextView
                            android:id="@+id/pagesTv"
                            android:layout_weight="1"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="N/A"
                            android:layout_marginEnd="5dp"/>
                    </TableRow>

                    <!--Weight Row-->
                    <TableRow
                        android:layout_marginTop="5dp"
                        >
                        <TextView
                            android:id="@+id/weightLabel"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Weight"
                            android:layout_marginEnd="5dp"/>
                        <TextView
                            android:id="@+id/weightTv"
                            android:layout_weight="1"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="N/A"
                            android:layout_marginEnd="5dp"/>
                    </TableRow>
                </TableLayout>

            </RelativeLayout>

            <!--Book description-->
            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="The description of the book."
                android:textColor="@color/black"/>

            <!--Book identifiers-->
            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/identifiers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="The identifiers of the book."
                android:textColor="@color/black"/>
        </LinearLayout>
    </ScrollView>




</RelativeLayout>